Summarize the JW argument

--- a/src/main.tex
+++ b/src/main.tex
@@ -4,12 +4,12 @@
 
 
 % Front matter inputs
-\title{\LaTeX\ Essay Template}
-\subtitle{According to the Heritage Manual of Style}
+\title{Word Study of πρωτότοκος}
+\subtitle{for the interpretation of Colossians 1:15}
 \author{John Homenuke}
 \date{\today}
-\instructor{Dr.\ Instructor}
-\course{ABC123: Name of course}
+% \instructor{Dr.\ Instructor}
+% \course{ABC123: Name of course}
 
 
 %% BEGIN DOCUMENT
@@ -23,11 +23,8 @@
 \setlength{\parindent}{0.5in}
 \setstretch{2}
 
-Here is some Greek: πρωτότοκος
-
-\textgr{πρωτότοκος}
-
-
+\input{content/jw-argument.tex}
+\input{content/firstborn-genitive.tex}
 
 % End Matter
 \newpage
