--- a/src/refs/articles.bib
+++ b/src/refs/articles.bib
@@ -51,3 +51,15 @@
     location    = {Downers Grove, IL},
     pages       = {480--484}
 }
+
+
+@incollection{awake1979firstborn,
+	booktitle	= {Awake!},
+	publisher	= {Watchtower Bible {and} Tract Society of Pennsylvania},
+	title		= {Jesus Christ as `the First-Born of All Creation'},
+	year		= 1979,
+	month		= {April},
+	pages		= {28--29},
+	url			= {https://wol.jw.org/en/wol/d/r1/lp-e/101979249},
+}
+
